--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.7.16",
     "redux": "^4.0.5",
     "redux-form": "^8.3.1",
     "redux-thunk": "^2.3.0",
@@ -58,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -67,6 +69,7 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "url-loader": "^4.0.0",
+    "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   }
